force-app/main/default/objects/Content_Migration__c/Content_Migration__c.object-meta.xml
<CustomObject>
    <description>This object keeps track of images that need to be migrated to ContentDocument on Chatter</description>
    <label>Content Migration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Content Migration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contents Migration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>