force-app/main/default/objects/Content_Migration__c/fields/Content_Reference_Url__c.field-meta.xml
<CustomField>
    <fullName>Content_Reference_Url__c</fullName>
    <description>Url of the content reference, as stored on the body of the Chatter Questions and Answers records</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Content Reference Url</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>