force-app/main/default/objects/Content_Migration__c/fields/Feed_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Feed_Record_Id__c</fullName>
    <description>Id of the feedItem or feedComment that will be updated with the new Content</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Feed Record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>