force-app/main/default/objects/Content_Migration__c/fields/Network_Scope__c.field-meta.xml
<CustomField>
    <fullName>Network_Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network Scope</label>
    <length>18</length>
    <type>Text</type>
</CustomField>