force-app/main/default/objects/Content_Migration__c/fields/Original_QA_record_Id__c.field-meta.xml
<CustomField>
    <fullName>Original_QA_record_Id__c</fullName>
    <description>Id of the Question or Reply record where the url is referenced</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Original QA record Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>