force-app/main/default/objects/Content_Migration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Content_Reference_Url__c</columns>
    <columns>Feed_Record_Id__c</columns>
    <columns>Network_Scope__c</columns>
    <columns>Original_QA_record_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>